--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>KaspiChessDB v0.1.6</title>   
+        <title>KaspiChessDB v0.2.0</title>   
         <script src = "/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
         <script src="js/jquery-ui.js"></script>
@@ -177,6 +177,10 @@
                     <button style="width:26px; float:left; margin-top:8px; margin-left:8px; font-family:Arial,Helvetica,sans-serif; font-weight:bold;" id="btPREVGames" title="Go to the previous games" type="button"><span style="float:left; font-size:20px; margin-left:-12px;" class="ui-icon ui-icon-arrowthick-1-w">icon</span></button>
                     <button style="width:26px; float:left; margin-top:8px; margin-left:8px; font-family:Arial,Helvetica,sans-serif; font-weight:bold;" id="btNEXTGames" title="Go to the next games" type="button"><span style="float:left; font-size:20px; margin-left:-12px;" class="ui-icon ui-icon-arrowthick-1-e">icon</span></button>
                     <button style="width:26px; float:left; margin-top:8px; margin-left:8px; font-family:Arial,Helvetica,sans-serif; font-weight:bold;" id="btENDGames" title="Go to the final games" type="button"><span style="float:left; font-size:20px; margin-left:-12px;" class="ui-icon ui-icon-arrowstop-1-e">icon</span></button>
+                </div>
+                <div style="float:left; margin-top:8px; margin-left:32px; background-color:#ffffff; border:2px coral solid; width:196px; height:50px;">
+                    <label style="margin-top:16px; margin-left:32px; font-size:20px; font-family:Verdana,Arial,Helvetica,sans-serif; font-weight:bold;">KaspiChess</label>
+                    <label style="margin-top:16px; margin-left:8px; font-size:20px; font-family:Verdana,Arial,Helvetica,sans-serif; font-weight:bold;">DataBase v0.2.0</label>
                 </div>
             </div>
 
